@@ -1638,7 +1638,7 @@ abstract class getid3_handler
 	    if (!getid3_lib::intValueSupported($pos)) {
 			throw new getid3_exception('cannot fread('.$bytes.' from '.$this->ftell().') because beyond PHP filesystem limit', 10);
 	    }
-		return fread($this->getid3->fp, $bytes);
+		@fread($this->getid3->fp, $bytes);
 	}
 
 	protected function fseek($bytes, $whence=SEEK_SET) {
